syntax = "proto3";

import "google/protobuf/timestamp.proto";
package liteq;
option go_package = "./queue/proto";

message TaskType { uint32 type = 1; }

message Task {
  string id = 1;
  bytes data = 2;
  google.protobuf.Timestamp created_at = 3;
  enum TaskStatus {
    created = 0;
    processing = 1;
    failed = 2;
    done = 3;
  }
}

service LiteQ {
  rpc GetTasks(stream TaskType) returns (stream Task) {}
}